--- a/Curriculum/css/main.css
+++ b/Curriculum/css/main.css
@@ -17,6 +17,7 @@ body {
     background: url(../img/fondo.png);
     background-attachment: fixed;
     background-size: 130% 130%;
+    background-position: 0 0;
 }
 
 /* Header */
